force-app/main/default/objects/custom_create238__c/custom_create238__c.object-meta.xml
<CustomObject>
    <label>Custom created object238</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects238</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>