force-app/main/default/objects/custom_create238__c/fields/custom_create_238field538__c.field-meta.xml
<CustomField>
    <fullName>custom_create_238field538__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 238field538</label>
    <type>Checkbox</type>
</CustomField>